; ModuleID = '/home/carl/AnghaBench/linux/drivers/target/extr_target_core_fabric_configfs.c_target_fabric_port_alua_tg_pt_gp_show.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/target/extr_target_core_fabric_configfs.c_target_fabric_port_alua_tg_pt_gp_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config_item = type { i32 }
%struct.se_lun = type { i32 }

@ENODEV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.config_item*, i8*)* @target_fabric_port_alua_tg_pt_gp_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @target_fabric_port_alua_tg_pt_gp_show(%struct.config_item* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.config_item*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.se_lun*, align 8
  store %struct.config_item* %0, %struct.config_item** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load %struct.config_item*, %struct.config_item** %4, align 8
  %8 = call %struct.se_lun* @item_to_lun(%struct.config_item* %7)
  store %struct.se_lun* %8, %struct.se_lun** %6, align 8
  %9 = load %struct.se_lun*, %struct.se_lun** %6, align 8
  %10 = icmp ne %struct.se_lun* %9, null
  br i1 %10, label %11, label %16

11:                                               ; preds = %2
  %12 = load %struct.se_lun*, %struct.se_lun** %6, align 8
  %13 = getelementptr inbounds %struct.se_lun, %struct.se_lun* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %11, %2
  %17 = load i32, i32* @ENODEV, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %3, align 4
  br label %23

19:                                               ; preds = %11
  %20 = load %struct.se_lun*, %struct.se_lun** %6, align 8
  %21 = load i8*, i8** %5, align 8
  %22 = call i32 @core_alua_show_tg_pt_gp_info(%struct.se_lun* %20, i8* %21)
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %19, %16
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local %struct.se_lun* @item_to_lun(%struct.config_item*) #1

declare dso_local i32 @core_alua_show_tg_pt_gp_info(%struct.se_lun*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
